# futhark-experiments

./: .gitignore  Cargo.toml  Makefile  build.rs  futhark.pkg
codegen/: Cargo.toml
codegen/src/: main.rs
src/: impl.fut  main.rs
